--- a/slot777/index.html
+++ b/slot777/index.html
@@ -170,13 +170,13 @@
 
 <p style="text-align: justify">Selain game Judi Slot 777 Gacor yang telah kami berikan sebelumnya, maka kali ini waktunya untuk bisa mengetahui beberapa cara jitu untuk mendapatkan kemenangannya. Memang semestinya Anda sebagai pemain pemula wajib mengetahui hal tersebut, agar kiranya mampu mendapatkan nilai jackpot pada setiap jenis gamenya. Maka dari itu, gabung langsung dengan situs slot gacor Terbaik di Infini88 Slot saat ini juga demi bisa mencoba apakah benar-benar jitu cara yang telah kami sampaikan di bawah ini :</p>
 
-<strong><p style="text-align: justify">1. Memiliki modal bermain yang pasti</p></strong>
+<p style="text-align: justify"><strong>1. Memiliki modal bermain yang pasti</strong></p>
 <p style="text-align: justify">Sebelum bermain, tentu saja seluruh member wajib memiliki modal bermain terlebih dahulu apabila benar-benar ingin mendapatkan kemenangannya. Jadi sebelum bermain Infini88 Slot dan mendapatkan sebagian Jackpotnya, maka pastikan lebih dahulu untuk bisa melakukan deposit saldo secukupnya, yakni sekitar Rp. 25.000 rupiah di awal. Apabila Anda memiliki modal lebih, maka lakukanlah sesuai dengan keinginan diri masing-masing. Namun minimalnya adalah Sepuluh Ribu Rupiah di Situs Slot Infini88.</p>
 
-<strong><p style="text-align: justify">2. Mengenal karakter dari setiap mesin slot onlinenya</p></strong>
+<p style="text-align: justify"><strong>2. Mengenal karakter dari setiap mesin slot onlinenya</strong></p>
 <p style="text-align: justify">Para pemain mampu memanjakan diri mereka dengan berbagai macam jenis slot onlinenya. Hal ini tentu saja membuat mereka selaku member tidak merasa bosan ketika sedang mencoba game judi slot online di Infini88 ini. Dari banyaknya jenis game judi slot online di situs ini adalah dengan memilih manakah game slot online yang memiliki nilai Win Rate jauh lebih tinggi di dalam memberikan banyak keuntungan jauh lebih besar lagi. Mengapa demikian ? karena dengan tingginya Win Rate di Infini88 Slot, kedepannya mampu membawa Anda dalam hadiah Jackpot besar di setiap harinya.</p>
 
-<strong><p style="text-align: justify">3. Bermain dan Menggunakan Auto Spin Wajib Aktif</p></strong>
+<p style="text-align: justify"><strong>3. Bermain dan Menggunakan Auto Spin Wajib Aktif</strong></p>
 <p style="text-align: justify">Apabila sudah menjalankan 2 hal diatas ini, maka langkah selanjutnya adalah mengaktifkan pemakaian tombol auto spin di Situs Infini88 Slot ini. Sebab bila ingin menang dalam judi slot online ini, Anda semestinya bisa mendapatkan simbol yang sama dalam setiap garisnya. Namun lagi lagi pemakaian modal sangat amat menentukan sekali. Ada baiknya untuk Anda bisa memiliki modal lebih besar jika memang selalu ingin mengaktifkan Auto Spin dalam permainannya.</p>
 
 <h3 style="text-align: center">Bocoran Jam Slot Online Gacor Slot 777 Mudah Menang Hari Ini</h3>
